fix(*): correct dimensions of various components
* Fixed the body width to remove horizontal scroll bar
* Added padding to price
* Fixed footer going over other body text

--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -2,8 +2,6 @@ footer {
   background-color: #fff;
   width: 100%;
   border-top: 1px solid #cccccc;
-  position: absolute;
-  bottom: 0;
 }
 
 footer p {
