--- a/web_static/styles/3-header.css
+++ b/web_static/styles/3-header.css
@@ -12,6 +12,4 @@ header {
   background-size: contain;
   height: 100%;
   width: 100%;
-  margin-left: 20px;
-  display: inline-block;
 }
