--- a/web_static/styles/4-common.css
+++ b/web_static/styles/4-common.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
   padding: 0;
+  width: 100%;
   color: #484848;
   font-size: 14px;
   font-family: Circular, "Helvetica Neue", Helvetica, Arial, sans-serif;
